--- a/week6/cms/views/newpage.ejs
+++ b/week6/cms/views/newpage.ejs
@@ -4,7 +4,9 @@
     </head>
     <body>
         <form method="POST" action="/newpage">
-            <input type="hidden" name="_id" value="<%= data._id %>">
+            <% if (data._id != -1) { %>
+                <input type="hidden" name="_id" value="<%= data._id %>">
+            <% } %>
             <label for="title">Title:</label>
             <input type="text" name="title" value="<%= data.title %>"><br />
             <label for="maincontent">Main Content:</label>
